--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="container">
-        <h2 class="text-center text-success">Search your favorite Book</h2>
+        <h2 class="text-center text-secondary p-3">Search your favorite Book</h2>
 
         <!--------------------------------- Book search area start------------------------------------->
         <div class="input-group mb-3 w-50 mx-auto">
@@ -26,16 +26,16 @@
 
 
         <!--------------------------------- result Found number star ----------------------------------->
-        <h4 class=" text-dark text-center m-4 -p-2" id="result-numbers"></h4>
+        <h4 class=" text-secondary text-center m-4 p-2" id="result-numbers"></h4>
         <!--------------------------------- result Found number ended ---------------------------------->
 
 
         <!---------------------------------- book container start -------------------------------------->
-        <div id="book-container" class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="book-container" class="row row-cols-1 row-cols-md-3 g-4 bg-light">
         </div>
         <!---------------------------------- book container endde --------------------------------------->
 
-        <!----------------------------------- spiner and error ----------------------------------------->
+        <!----------------------------------- spiner and error start ------------------------------------>
         <div class="d-flex justify-content-center p-5 d-none" id="spinner">
             <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
                 <span class="visually-hidden">Loading...</span>
@@ -44,12 +44,12 @@
 
         <div class="p-4 text-danger text-center d-none" id="error">
             <h2>No Result Found</h2>
-            <p>please search a valid book name</p>
+            <p>Please search a valid book name</p>
         </div>
         <div class="p-4 m-5 text-danger text-center d-none" id="empty-error">
             <h4>Please Input a Book Name</h4>
         </div>
-
+        <!------------------------------------ spiner and error ended ----------------------------------->
 
 
 
